css added to navbar

--- a/public_html/pages/stylesheet.css
+++ b/public_html/pages/stylesheet.css
@@ -1,17 +1,38 @@
-.first-slide{
-	height: 700px;
-	width: 850px;
-	float: none;
+.navbar-inverse .navbar-brand {
+	color: #621f80;
 }
 
-.second-slide{
+
+
+
+
+
+
+
+
+
+
+.first-slide  {
 	height: 700px;
-	width: 850px;
-	float: none;
+	width: 900px;
+	position: relative;
+	left: 275px;
+	box-shadow: 10px 10px 10px #aaa;
+}
+
+.second-slide {
+	height: 700px;
+	width: 900px;
+	position: relative;
+	left: 275px;
+	box-shadow: 10px 10px 10px #aaa;
 }
 
 .third-slide {
 	height: 700px;
-	width: 850px;
-	float: none;
+	width: 900px;
+	position: relative;
+	left: 275px;
+	box-shadow: 10px 10px 10px #aaa;
 }
+
