--- a/public_html/pages/stylesheet.css
+++ b/public_html/pages/stylesheet.css
@@ -7,12 +7,14 @@
 	color: white;
 }
 
-.navbar-inverse .navbar-fixed-top:hover,
-.navbar-inverse .navbar-fixed-top:focus {
+.navbar-inverse .navbar-nav  > li > a:hover {
 	color: #cc101d;
 	background-color: transparent;
 }
 
+.navbar-inverse .dropdown-menu>li>a:hover {
+	color: #cc101d
+}
 
 .first-slide  {
 	height: 700px;
@@ -41,4 +43,20 @@
 .myCarousel > a {
 	border-radius: 0;
 	color: black;
+}
+
+.carousel-control:focus,
+.carousel-control:hover {
+	color: black
+}
+
+h1 {
+	font-family: Georgia;
+	color:  #cc101d;
+}
+
+.btn-danger {
+	color: black;
+	border-radius: 0;
+	box-shadow: 6px 6px 6px #050505;
 }
