--- a/public_html/pages/stylesheet.css
+++ b/public_html/pages/stylesheet.css
@@ -21,28 +21,31 @@
 
 /*carousel css*/
 
+.item {
+	text-align: center;
+}
 .first-slide  {
 	height: 700px;
 	width: 900px;
-	position: relative;
-	left: 275px;
-	box-shadow: 10px 10px 10px #aaa;
+	/*position: relative;*/
+	/*left: 275px;*/
+	/*box-shadow: 10px 10px 10px #aaa;*/
 }
 
 .second-slide {
 	height: 700px;
 	width: 900px;
-	position: relative;
-	left: 275px;
-	box-shadow: 10px 10px 10px #aaa;
+	/*position: relative;*/
+	/*left: 275px;*/
+	/*box-shadow: 10px 10px 10px #aaa;*/
 }
 
 .third-slide {
 	height: 700px;
 	width: 900px;
-	position: relative;
-	left: 275px;
-	box-shadow: 10px 10px 10px #aaa;
+	/*position: relative;*/
+	/*left: 275px;*/
+	/*box-shadow: 10px 10px 10px #aaa;*/
 }
 
 .myCarousel > a {
@@ -86,3 +89,4 @@ h1 {
 .music {
 	text-align: center;
 }
+
