--- a/public_html/pages/stylesheet.css
+++ b/public_html/pages/stylesheet.css
@@ -2,7 +2,6 @@
 
 .navbar-inverse .navbar-brand {
 	color: #cc101d;
-	font-family: Kingthings Calligraphica;
 }
 
 .navbar-inverse .navbar-nav  > li > a {
@@ -21,29 +20,29 @@
 
 /*carousel css*/
 
-.first-slide  {
-	height: 700px;
-	width: 900px;
-	position: relative;
-	left: 275px;
-	box-shadow: 10px 10px 10px #aaa;
-}
+/*.first-slide  {*/
+	/*height: 700px;*/
+	/*width: 900px;*/
+	/*position: relative;*/
+	/*left: 275px;*/
+	/*box-shadow: 10px 10px 10px #aaa;*/
+/*}*/
 
-.second-slide {
-	height: 700px;
-	width: 900px;
-	position: relative;
-	left: 275px;
-	box-shadow: 10px 10px 10px #aaa;
-}
+/*.second-slide {*/
+	/*height: 700px;*/
+	/*width: 900px;*/
+	/*position: relative;*/
+	/*left: 275px;*/
+	/*box-shadow: 10px 10px 10px #aaa;*/
+/*}*/
 
-.third-slide {
-	height: 700px;
-	width: 900px;
-	position: relative;
-	left: 275px;
-	box-shadow: 10px 10px 10px #aaa;
-}
+/*.third-slide {*/
+	/*height: 700px;*/
+	/*width: 900px;*/
+	/*position: relative;*/
+	/*left: 275px;*/
+	/*box-shadow: 10px 10px 10px #aaa;*/
+/*}*/
 
 .myCarousel > a {
 	border-radius: 0;
@@ -76,9 +75,11 @@ h1 {
 	text-align: center;
 }
 
-.photo {
+.shirts {
 	width: 300px;
 	height:350px;
+	border: 10px double black;
+	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.59);
 }
 
 /*music css*/
