--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -21,7 +21,7 @@
 /*carousel css*/
 
 .mid-carousel {
-	clear: both;
+	margin-left: 45%;
 }
 
 /*.first-slide  {*/
@@ -83,6 +83,11 @@ h1 {
 	border: 10px double black;
 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.59);
 }
+
+h4 {
+	color: aliceblue;
+}
+
 
 /*music css*/
 
