--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -20,10 +20,6 @@
 
 /*carousel css*/
 
-.mid-carousel {
-	margin-left: 45%;
-}
-
 /*.first-slide  {*/
 /*height: 700px;*/
 /*width: 900px;*/
@@ -77,6 +73,7 @@ h1 {
 
 .scrolling {
 	text-align: center;
+	background-image: url("https://pixabay.com/get/e835b0082cf2093ed1534705fb0938c9bd22ffd41db4174990f5c77fa1/warsaw-1017468_1920.jpg");
 }
 
 .img-responsive {
