background image added

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -73,7 +73,7 @@ h1 {
 
 .scrolling {
 	text-align: center;
-	background-image: url("https://pixabay.com/get/e835b0082cf2093ed1534705fb0938c9bd22ffd41db4174990f5c77fa1/warsaw-1017468_1920.jpg");
+	background-image: url("");
 }
 
 .img-responsive {
