--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -44,6 +44,14 @@ left: 275px;
 box-shadow: 10px 10px 10px #aaa;
 }
 
+.forth-slide {
+	height: 700px;
+	width: 900px;
+	position: relative;
+	left: 275px;
+	box-shadow: 10px 10px 10px #aaa;
+}
+
 .myCarousel > a {
 	border-radius: 0;
 	color: black;
