rearranging artist page

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -106,10 +106,14 @@ h4 {
 	padding-top: 80px;
 }
 
-.yd > iframe {
+.p-t-16 {
+	padding-top: 160px;
+}
+
+.artsound {
 	padding-top: 25px;
 }
 
-.yd > .twitter-timeline {
+iframe#twitter-widget-0.twitter-timeline.twitter-timeline-rendered {
 	padding-top: 25px;
 }
