--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -98,7 +98,7 @@ h4 {
 /*music css*/
 
 .yd {
-	background-image: image(warsaw-1017468_1920.jpg);
+	background-image: url("warsaw-1017468_1920.jpg");
 }
 
 h2 {
