--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -75,6 +75,7 @@ h1 {
 
 .scrolling {
 	text-align: center;
+	background-image: url("new-york-city.jpg");
 }
 
 .img-responsive {
@@ -88,6 +89,10 @@ h4 {
 }
 
 /*music css*/
+
+.homemusic {
+	padding-top: 30px;
+}
 
 /*dylan's css*/
 
