added background image to main page

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -75,7 +75,7 @@ h1 {
 
 .scrolling {
 	text-align: center;
-	background-image: url("new-york-city.jpg");
+	background-image: url("images/new-york-city.jpg");
 }
 
 .img-responsive {
