commented out main page background image

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -74,7 +74,7 @@ h1 {
 /*Whole body*/
 
 body {
-	background-image: url("images/empire-state-building.jpg");
+	/*background-image: url("images/empire-state-building-10.jpg");*/
 }
 
 /*clothes css*/
