--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -65,7 +65,7 @@ h1 {
 
 /*Whole body*/
 
-body {
+body.classy {
 	background-image: url("images/antique.jpg");
 }
 
@@ -93,7 +93,7 @@ h4 {
 
 /*dylan's css*/
 
-.yd {
+.bg-city {
 	background-image: url("images/warsaw-1017468_1920.jpg");
 	color:aliceblue;
 }
@@ -119,7 +119,8 @@ h2 {
 /*footer css*/
 
 .footer {
-	padding-top: 25px;
+	margin-top: 20px;
+	padding-top: 20px;
 	background-color: rgba(211, 211, 211, 0.68);
 	font-family: Georgia;
 	text-align: center;
