--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -119,7 +119,7 @@ h2 {
 
 /*contact form*/
 
-.form-horizontal .well {
-	padding-top: 20px;
-	background-color: rgba(36, 36, 36, 0.42);
+.well {
+	padding-top: 60px;
+	background-image: rgba(36, 36, 36, 0.42);
 }
