fixing my links to work with new domain

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -121,5 +121,5 @@ h2 {
 
 .well {
 	padding-top: 60px;
-	background-image: rgba(36, 36, 36, 0.42);
+	background-color: rgba(211, 211, 211, 0.68);
 }
