removing the well and centering the form

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -120,6 +120,6 @@ h2 {
 /*contact form*/
 
 .well {
-	padding-top: 60px;
-	background-color: rgba(211, 211, 211, 0.68);
+	padding-top: 100px;
+	background-color: transparent;
 }
