--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -119,7 +119,7 @@ h2 {
 
 /*contact form*/
 
-.well {
-	padding-top: 100px;
+div#well.container {
+	padding-top:100px;
 	background-color: transparent;
 }
